# library-manage-system

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  WINDOWS_DEPLOY.md  gunicorn-cfg.py  init_data.sql  init_db.sql  manage.py  pyproject.toml  requirements.txt  serve.py  test01_weather.py
Api/: views.py
authentication/: urls.py  views.py
book/: forms.py  groups_permissions.py  models.py  notification.py  tests.py  urls.py  views.py
book/migrations/: 0034_auto_20260315_1856.py  0035_auto_20260408_1051.py  0036_alter_borrowrecord_open_or_close.py  0037_alter_borrowrecord_open_or_close.py
book/templatetags/: book_extras.py
core/: __init__.py  settings.py
templates/: index.html  notice_list.html
templates/accounts/: login.html  register.html
templates/book/: ai_search.html  book_create.html  book_detail.html  book_list.html  book_update.html  category_create.html  category_list.html  charts.html  download_data.html  employee_create.html  employee_detail.html  employees.html  global_search.html  member_create.html  member_detail.html  member_list.html  member_update.html  publisher_create.html  publisher_list.html  publisher_update.html  rankings.html  user_activity_list.html
templates/book/inclusions/: _pagination.html
templates/borrow_records/: create.html  detail.html  list.html
templates/errors/: 400.html  403.html  404.html  500.html
templates/includes/: navigation.html  sidebar.html
templates/layouts/: base-fullscreen.html  base.html
templates/profile/: profile_detail.html  profile_update.html
util/: useful.py
