[project]
name = "library-manage-system"
version = "0.1.0"
description = "Django 图书管理系统"
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
  "Django==2.2.10",
  "Pillow==8.4.0",
  "bootstrap4==0.1.0",
  "crispy-tailwind==0.5.0",
  "dj-database-url==0.5.0",
  "django-appconf==1.0.5",
  "django-bootstrap-datepicker-plus==4.0.0",
  "django-ckeditor==6.2.0",
  "django-crispy-forms==1.13.0",
  "django-model-utils==4.2.0",
  "django-mptt==0.13.4",
  "django-notifications-hq==1.6.0",
  "django-phonenumber-field==6.0.0",
  "djangorestframework==3.13.1",
  "gunicorn==20.1.0",
  "jsonfield==3.1.0",
  "numpy==1.23.5",
  "pandas==1.5.3",
  "python-dateutil==2.8.2",
  "python-decouple==3.4",
  "requests==2.26.0",
  "setuptools<81",
  "swapper==1.3.0",
  "whitenoise==5.2.0",
]

[tool.uv]
package = false
